# HamDiv

./: INSTALL.md  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.sh  test_vector.py
hamdiv/: __init__.py  additional_term.py  cli.py  diversity.py  utils.py
hamdiv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
